--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<!--
 <div class="container py-4">
   <div class="row pb-3">
     <p class="publication-title">{{ page.title }}</p>
@@ -77,4 +77,4 @@ layout: default
       {% if page.bibtex %}<a style="padding-right: 4px" href="https://donghoon.io" rel="external"><i class="fa-solid fa-book"></i> BibTeX</a>{% endif %}
     </p>
   </div>
-</div>
+</div>-->
